# Document_scanning_project

./: .gitignore  Test file.docx  ocr_ocr11.py  pipeline.py  progress_ocr.py  pyproject.toml  readme.txt  requirements.txt  ~$блон_отчёт_проект1_новый.docx  ~$чёт1_Шамрай_ИИ_б-25-2-о.docx  Отчёт1_Шамрай_ИИ_б-25-2-о.docx  Отчёт№1_проект_Шмуратов.docx  шаблон_отчёт_проект1.docx  шаблон_отчёт_проект1_новый.docx
OpenCV_proj/: cv.py  main.py  process1.py
OpenCV_proj/images/: json_main.json
OpenCV_proj/json/: json_main.json
OpenCV_proj/processed_images/: 1.tiff  2.tiff  Test.tiff
ocrnlp/: WITHOWT_NIKITA_TESTS.py  chages.py  log_config.py  normalizer.py  patterns.py  process.py  progress_ocr.py  rules.py
