[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "my_project"
version = "0.1.0"
dependencies = [
    "pytesseract",
    "opencv-python",
    "numpy",
    "pandas",
    "pillow",
    "pdf2image",
    "torch"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ocrnlp*", "OpenCV_proj*"]